@@ -5,10 +5,15 @@ import com.example.todo.DTO.ToDoDTOMap;
 import com.example.todo.Entity.ToDo;
 import com.example.todo.Repository.ToDoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.util.ReflectionUtils;
 
+import java.lang.reflect.Field;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 public class ToDoService {
@@ -23,9 +28,10 @@ public class ToDoService {
         this.toDoDTOMap = toDoDTOMap;
     }
 
-    public List<ToDoDTO> getToDos() {
-        return toDoRepository.findAllNonExpired()
-                .stream().map(toDoDTOMap).collect(Collectors.toList());
+    public List<ToDoDTO> getToDos(int pageNo, int pageSize) {
+        Pageable pageable = PageRequest.of(pageNo,pageSize);
+        Page<ToDo> toDos = toDoRepository.findAllNonExpired(pageable);
+        return toDos.getContent().stream().map(toDoDTOMap).toList();
     }
 
     public ToDo findToDo(Long id) {
@@ -50,20 +56,32 @@ public class ToDoService {
     public void updateToDo(Long id, ToDoDTO toDo) {
         ToDo userToDo = this.findToDo(id);
 
-        if (toDo.title() != null)
-            userToDo.setTitle(toDo.title());
-        if (toDo.description() != null)
-            userToDo.setDescription(toDo.description());
-        if (toDo.startDate() != null)
-            userToDo.setStartDate(toDo.startDate());
-        if (toDo.expirationDate() != null)
-            userToDo.setExpirationDate(toDo.expirationDate());
+        userToDo.setTitle(toDo.title());
+        userToDo.setDescription(toDo.description());
+        userToDo.setStartDate(toDo.startDate());
+        userToDo.setExpirationDate(toDo.expirationDate());
 
         toDoRepository.save(userToDo);
     }
 
-    public List<ToDoDTO> getToDosByUser(Long userId) {
-        return toDoRepository.findAllNonExpiredByUserId(userId).
-                stream().map(toDoDTOMap).collect(Collectors.toList());
+    public List<ToDoDTO> getToDosByUser(Long userId, int pageNo, int pageSize) {
+        Pageable pageable = PageRequest.of(pageNo,pageSize);
+        Page<ToDo> toDos = toDoRepository.findAllNonExpiredByUserId(userId, pageable);
+        return toDos.getContent().stream().map(toDoDTOMap).toList();
+    }
+
+    public void updateToDoPartially(Long id, Map<String, Object> toDo) {
+        ToDo userToDo = this.findToDo(id);
+
+        toDo.forEach((key, value) -> {
+            Field field = ReflectionUtils.findField(userToDo.getClass(), key);
+
+            if (field != null) {
+                ReflectionUtils.makeAccessible(field);
+                ReflectionUtils.setField(field, userToDo, value);
+
+                toDoRepository.save(userToDo);
+            }
+        });
     }
 }
